--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "./dist/server.js",
   "scripts": {
     "start:dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "test": "echo \"Error: no test specified\" && exit 1"
+    
+    
   },
   "author": "",
   "license": "ISC",
